Thu Jun 30 06:16:53 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.8 which contains fixes for documentation
	  in trunk.

Thu Jun 30 02:53:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_threadptr_execute_interrupts_common): remove
	  meaningless native_thread_yield(). It never close a race.

Thu Jun 30 02:41:47 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_schedule_limits): minor optimization.
	  eliminate machine context saving when running time is enough small.

Thu Jun 30 02:28:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_schedule_rec): move interrupt_flag check to
	  rb_thread_schedule().
	  And also rename to rb_thead_schedule_limits() and remove
	  sched_depth argument. It's no longer called recursive.
	* thread.c (rb_thread_schedule): add to check interrupt_flag as
	  above explained.

	* thread.c (rb_threadptr_execute_interrupts_rec): rename to
	  rb_threadptr_execute_interrupts_common() and remove sched_depth
	  argument. It's no longer called recursive.

	* thread.c (rb_thread_sleep): adapt the renaming.
	* thread.c (rb_threadptr_execute_interrupts): ditto.
	* thread.c (rb_thread_execute_interrupts): ditto.

Thu Jun 30 01:31:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_s_pass): change RDoc description and remove
	  a sample code. The actual implementaion never behave as explained by
	  an example. It's a documentation bug.

Thu Jun 30 00:54:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_stop): change RDoc sample code. The old
	  example is buggy and may cause deadlock. The patch is
	  suggested by Heesob Park <phasis@gmail.com>. Thank you!
	  [Bug #3606][ruby-core:31454]

Thu Jun 30 00:49:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_wakeup): change RDoc sample code. The old
	  example is buggy and may not display anything by a race.